--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
       <div class="box">
         <p><strong>Fastest:</strong> email me with your listing link.</p>
-        <a class="btn" href="mailto:you@yourdomain.com?subject=Property%20QR%20Setup&body=Name:%0AAgency:%0APhone:%0AListing%20link:%0A">
+        <a class="btn" href="mailto:me@solutionsbyab.com?subject=Property%20QR%20Setup&body=Name:%0AAgency:%0APhone:%0AListing%20link:%0A">
           Email setup request
         </a>
         <p class="small">Replace the email address with yours.</p>
